--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "grunt-mocha-cli": "^1.12.0",
     "jshint-stylish": "^1.0.1",
     "load-grunt-tasks": "^3.1.0",
-    "time-grunt": "^1.1.0"
+    "time-grunt": "^1.1.0",
+    "xmldom": "^0.1.19"
   },
   "scripts": {
     "test": "grunt"
