updated author details

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": {
     "name": "Dolan Miu",
     "email": "dolan_miu@hotmail.com",
-    "url": "http://dolan.bio"
+    "url": "http://www.dolan.bio"
   },
   "repository": "dolanmiu/office-clippy",
   "license": "MIT",
