--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "office-clippy",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A tool to create office documents with JS",
   "homepage": "https://www.github.com/dolanmiu",
   "author": {
@@ -11,6 +11,7 @@
   "repository": "dolanmiu/office-clippy",
   "license": "MIT",
   "files": [
+    "index.js",
     "lib"
   ],
   "keywords": [
@@ -18,6 +19,7 @@
     "office",
     "gen",
     "generator",
+    "docx",
     "pptx",
     "clippy",
     "document"
